# jar determination